# learningVulkan

./: .gitignore  .projectile  CMakeLists.txt  README.org  notes.org
shaders/: basic.vert  frag.spv  vert.spv
src/: allocation.hpp  base.hpp  buffers.hpp  commands.hpp  device.hpp  main.cpp  messages.hpp  pipeline.hpp  renderpass.hpp  settings.hpp  swapchain.hpp  vertex.hpp
